--- a/skillio/messages.html
+++ b/skillio/messages.html
@@ -842,17 +842,21 @@
           <strong>Description:</strong> ${swapData?.description || 'No description'}
         </div>
         <div style="display: flex; gap: 10px;">
-          <button onclick="respondToSwap('${message.swapId}', 'accepted')" 
+          <button onclick="try { respondToSwap('${message.swapId}', 'accepted'); } catch(e) { alert('Error calling respondToSwap: ' + e.message); }" 
                   style="background: #28a745; color: white; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer;">
             Accept
           </button>
-          <button onclick="respondToSwap('${message.swapId}', 'declined')" 
+          <button onclick="try { respondToSwap('${message.swapId}', 'declined'); } catch(e) { alert('Error calling respondToSwap: ' + e.message); }" 
                   style="background: #dc3545; color: white; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer;">
             Decline
           </button>
           <button onclick="testRemoveSwapRequest('${message.swapId}')" 
                   style="background: #ffc107; color: black; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer;">
             Test Remove
+          </button>
+          <button onclick="alert('respondToSwap function exists: ' + (typeof respondToSwap === 'function')); alert('swapId: ${message.swapId}');" 
+                  style="background: #17a2b8; color: white; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer;">
+            Test Function
           </button>
         </div>
       `;
