--- a/index.html
+++ b/index.html
@@ -262,41 +262,41 @@
 <body>
   <header>
     <img src="skillio/skillio logo.png" alt="Skillio Logo" class="logo-flip" />
-    <p><span class="slogan type">Give a skill Gain a skill</span> <span class="grow">Grow together!</span></p>
+    <p><span class="slogan type">Swap Skills</span> <span class="grow">Grow Together!</span></p>
   </header>
 
   <section class="features">
     <div class="feature">
-      <img src="skillio/skill_icon_1.png" alt="Time Wallet Icon" />
-      <h3>Time Wallet</h3>
-      <p>Earn time credits by helping others. Spend them on skills you need.</p>
+      <img src="skillio/skill_icon_1.png" alt="Skill Exchange Icon" />
+      <h3>Skill Exchange</h3>
+      <p>Trade your expertise for new skills. No money needed, just mutual learning.</p>
     </div>
     <div class="feature">
       <img src="skillio/skill_icon_3.png" alt="Smart Matching Icon" />
       <h3>Smart Matching</h3>
-      <p>We connect you with people who have the skills you're looking for.</p>
+      <p>Find the perfect skill swap partner based on what you offer and need.</p>
     </div>
     <div class="feature">
       <img src="skillio/skill_icon_2.png" alt="Skill Profiles Icon" />
       <h3>Skill Profiles</h3>
-      <p>Showcase your talents with ratings, bios, and past contributions.</p>
+      <p>Showcase your talents and discover others' expertise in our community.</p>
     </div>
     <div class="feature">
       <img src="skillio/skill_icon_4.png" alt="Community Icon" />
       <h3>Community</h3>
-      <p>Join a growing network of learners, helpers, and creators.</p>
+      <p>Join a vibrant network of skill sharers, learners, and creators.</p>
     </div>
   </section>
 
   <div class="cta">
-    <a href="skillio/main.html">Start Swapping Skills</a>
+    <a href="skillio/main.html">Start Skill Swapping</a>
   </div>
 
   <section class="mission-section">
     <img src="skillio/mission-image.jpg" alt="Mission Visual">
     <div class="mission-text">
       <h2>Our Mission</h2>
-      <p>Skillio exists to create a fair, inclusive economy where everyone’s time and talents are valued. Whether you’re teaching guitar or learning to cook, our goal is to connect you with people in a vibrant, skill-sharing community that thrives on giving and gaining, not spending.</p>
+      <p>Skillio creates a world where everyone's skills are valued equally. Whether you're teaching guitar or learning to cook, we connect you with people who want to swap knowledge. Our platform makes skill exchange simple, fun, and accessible to everyone who believes in the power of mutual learning.</p>
     </div>
   </section>
 
