--- a/index.html
+++ b/index.html
@@ -184,30 +184,35 @@
     }
 
     .slogan {
-      display: inline-block;
+      font-size: 4em;
+      font-weight: 900;
+      color: white;
+      text-align: center;
+      margin: 0;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
     }
 
     .grow {
       display: inline-block;
-      animation: growText 1s ease-in-out forwards;
-      animation-delay: 3s;
+      animation: growText 0.8s ease-in-out forwards;
+      animation-delay: 1.8s;
       opacity: 0;
-      margin-top: 10px;
+      margin-top: 15px;
     }
 
     @keyframes growText {
       0% { transform: scale(1); opacity: 0; }
-      50% { transform: scale(1.2); opacity: 1; }
+      50% { transform: scale(1.1); opacity: 1; }
       100% { transform: scale(1); opacity: 1; }
     }
 
     .type {
       overflow: hidden;
       white-space: nowrap;
-      border-right: 3px solid white;
+      border-right: 4px solid white;
       animation-fill-mode: forwards;
       display: inline-block;
-      animation: typing 2.5s steps(11, end);
+      animation: typing 1.5s steps(11, end);
     }
 
     @keyframes typing {
