--- a/index.html
+++ b/index.html
@@ -192,20 +192,6 @@
       text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
     }
 
-    .grow {
-      display: inline-block;
-      animation: growText 0.8s ease-in-out forwards;
-      animation-delay: 1.8s;
-      opacity: 0;
-      margin-top: 15px;
-    }
-
-    @keyframes growText {
-      0% { transform: scale(1); opacity: 0; }
-      50% { transform: scale(1.1); opacity: 1; }
-      100% { transform: scale(1); opacity: 1; }
-    }
-
     .type {
       overflow: hidden;
       white-space: nowrap;
@@ -213,11 +199,33 @@
       animation-fill-mode: forwards;
       display: inline-block;
       animation: typing 1.5s steps(11, end);
+      font-size: 4em;
+      font-weight: 900;
+      color: white;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
     }
 
     @keyframes typing {
       from { width: 0 }
       to { width: 11ch }
+    }
+
+    .grow {
+      display: inline-block;
+      animation: growText 0.8s ease-in-out forwards;
+      animation-delay: 1.8s;
+      opacity: 0;
+      margin-top: 15px;
+      font-size: 4em;
+      font-weight: 900;
+      color: white;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+    }
+
+    @keyframes growText {
+      0% { transform: scale(1); opacity: 0; }
+      50% { transform: scale(1.1); opacity: 1; }
+      100% { transform: scale(1); opacity: 1; }
     }
 
     .slogan-container {
