--- a/skillio/messages.html
+++ b/skillio/messages.html
@@ -23,7 +23,16 @@
     .conversation { padding: 15px; border-bottom: 1px solid #eee; cursor: pointer; display: flex;
                     align-items: center; gap: 15px; }
     .conversation:hover { background-color: #f1fafd; }
-    .profile-pic { width: 40px; height: 40px; border-radius: 50%; object-fit: cover; border: 2px solid #00bcd4; }
+    .profile-pic { 
+      width: 40px; 
+      height: 40px; 
+      border-radius: 50%; 
+      object-fit: cover; 
+      object-position: center;
+      border: 2px solid #00bcd4; 
+      flex-shrink: 0;
+      display: block;
+    }
     .messages { padding-left: 55px; display: none; animation: fadeIn 0.3s ease-in-out; }
     .message-line { padding: 6px 0; }
     .reply-box { display: flex; margin-top: 10px; flex-wrap: wrap; gap: 10px; }
