--- a/skillio/messages.html
+++ b/skillio/messages.html
@@ -903,7 +903,7 @@
             messageDiv.className = 'message';
             messageDiv.innerHTML = `
               <div style="display: flex; align-items: start; margin-bottom: 10px;">
-                <img src="${profilePic}" alt="Profile" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;">
+                <img src="${profilePic}" alt="Profile" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; object-position: center; flex-shrink: 0; margin-right: 10px;">
                 <div style="flex: 1;">
                   <div style="font-weight: bold; margin-bottom: 5px;">
                     ${isFromCurrentUser ? currentUserName : targetUserName}
@@ -966,6 +966,7 @@
   </script>
 </body>
 </html>
+
 
 
 
