--- a/skillio/messages.html
+++ b/skillio/messages.html
@@ -69,8 +69,10 @@
       border-radius: 12px;
       width: 90%;
       max-width: 400px;
+      max-height: 80vh;
       box-shadow: 0 4px 20px rgba(0,0,0,0.3);
       animation: modalSlideUp 0.3s ease-out;
+      overflow-y: auto;
     }
 
     @keyframes modalSlideUp {
@@ -86,10 +88,15 @@
       text-align: center;
       font-size: 18px;
       font-weight: bold;
+      position: sticky;
+      top: 0;
+      z-index: 10;
     }
 
     .modal-body {
       padding: 20px;
+      max-height: 60vh;
+      overflow-y: auto;
     }
 
     .form-group {
@@ -121,6 +128,10 @@
       padding: 20px;
       display: flex;
       gap: 10px;
+      position: sticky;
+      bottom: 0;
+      background: #fefefe;
+      border-top: 1px solid #eee;
     }
 
     .btn {
